[package]
name = "safe_presale"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "safe_presale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = {version="0.30.0", features = ["init-if-needed","event-cpi"]}
anchor-spl = "0.30.0"
mpl-token-metadata = "4.1.2"
uint = "0.9.5"